--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 						<ul class="icons">
 							<li><a href="https://www.youtube.com/channel/UCdj3dgAxb3NmKsE9IbuphGA" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 							<li><a href="https://github.com/CharlieEvert" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.kaggle.com/charlieevert" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ralphcharlesevertiv/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.kaggle.com/wilburwilliams" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+							<li><a href="https://www.linkedin.com/in/wilbur-williams-the-first/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -76,7 +76,7 @@
 								    </p>
 								</header>
 
-								<a href="https://www.linkedin.com/in/ralphcharlesevertiv/" class="image"><img src="images/PS1.png" alt="" /></a>
+								<a href="https://www.linkedin.com/in/ralphcharlesevertiv/" class="image"><img src="images/PS2.png" alt="" /></a>
 								<ul class="actions special">
 
 								<button id="playAudioButton" onclick="togglePlay()"><i class="fas fa-play"></i> 
@@ -193,14 +193,14 @@
 				            <ul class="icons alt">
 				                <li><a href="https://www.youtube.com/channel/UCdj3dgAxb3NmKsE9IbuphGA" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 				                <li><a href="https://github.com/WilDev97" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-				                <li><a href="https://www.kaggle.com/charlieevert" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
-				                <li><a href="https://www.linkedin.com/in/ralphcharlesevertiv/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				                <li><a href="https://www.kaggle.com/wilburwilliams" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+				                <li><a href="https://www.linkedin.com/in/wilbur-williams-the-first/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				            </ul>
 				        </section>
 				    </section>
 
 				<audio id="backgroundAudio" loop>
-				    <source src="assets/Wave of Synergy.mp3" type="audio/mpeg">
+				    <source src="assets/ES_Bad Service - Damma Beatz.mp3" type="audio/mpeg">
 				    Your browser does not support the audio element.
 				</audio>
 				</footer>
