--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://www.linkedin.com/in/ralphcharlesevertiv/details/featured/" class="logo">Resumé</a>
+						<a href="https://www.linkedin.com/in/wilbur-williams-the-first/details/featured/" class="logo">Resumé</a>
 					</header>
 
 				<!-- Nav -->
@@ -76,7 +76,7 @@
 								    </p>
 								</header>
 
-								<a href="https://www.linkedin.com/in/ralphcharlesevertiv/" class="image"><img src="images/PS2.png" alt="" /></a>
+								<a href="https://www.linkedin.com/in/wilbur-williams-the-first/" class="image" ><img id = "profile_image" src="images/ps3.png" alt=""/></a>
 								<ul class="actions special">
 
 								<button id="playAudioButton" onclick="togglePlay()"><i class="fas fa-play"></i> 
@@ -104,7 +104,7 @@
 								<article>
 									<header>
 										<span class="date">Tidyverse, DPLYR, GGPLOT, Rplot, Machine Learning, Stats</span>
-										<h2><a href="https://github.com/CharlieEvert/R">R</a></h2>
+										<h2><a href="https://github.com/WilDev97/Tennis_App">Serve Savant AI </a></h2>
 									</header>
 									<a href="https://github.com/CharlieEvert/R" class="image fit"><img src="images/R.png" alt="" /></a>
 									<p> I showcase a data cleaning, data visualization and predictive modeling project I created using R. I dissect New York City 5-car-crashes including delving into the who, what, where, when and why of the data.</p>
