--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<span class="date">Tidyverse, DPLYR, GGPLOT, Rplot, Machine Learning, Stats</span>
 										<h2><a href="https://github.com/WilDev97/Tennis_App">Serve Savant AI </a></h2>
 									</header>
-									<a href="https://github.com/CharlieEvert/R" class="image fit"><img src="images/R.png" alt="" /></a>
+									<a href="https://github.com/CharlieEvert/R" class="image fit" id = "project_image"><img src="images/ServesavantImage.jpg" alt="" /></a>
 									<p> I showcase a data cleaning, data visualization and predictive modeling project I created using R. I dissect New York City 5-car-crashes including delving into the who, what, where, when and why of the data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/CharlieEvert/R" class="button">View Projects</a></li>
