--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<header class="major">
 								    <span class="date">Hello!</span>
 								    <h2><a href="https://www.linkedin.com/in/ralphcharlesevertiv/">About Me</a></h2>
-								    <p>
+								    <p class = "bio">
 										Greetings! I'm Wilbur Williams, hailing from the picturesque St. Thomas in the US Virgin Islands. Throughout my life, I've been a dedicated athlete, proudly representing my home in international tennis tournaments across the Caribbean. This athletic journey instilled in me the invaluable lesson that hard work may not always result in immediate victory, but it undeniably paves the way for long-term success.
 
 										In pursuit of my passion for technology, I embarked on a journey in computer science at Hunter College, aspiring to become a software engineer. However, as life often unfolds unexpected twists, I discovered that my true calling lies in cloud engineering. Taking a step back to reassess my path, I am now fervently working towards a rewarding career in cloud engineering.
@@ -115,9 +115,9 @@
 							<article>
 								<header>
 									<span class="date">Dashboards, Breweries, Admission Stats, Malteses, Property Taxes</span>
-									<h2><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData">PowerBI & Tableau</a></h2>
+									<h2><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData">Poker Prophet AI</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="image fit"><img src="images/Viz.png" alt="" /></a>
+								<a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="image fit" id = "project_image"><img src="images/catpoker.jpg" alt="" /></a>
 								<p>These are data visualizations that I created using Tableau and PowerBI using Open Data sources. I explore breweries, malteses (the ferocious little dogs), crime, admissions, telecom and even property tax data. </p>
 								<ul class="actions special">
 									<li><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="button">View Projects</a></li>
