--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Wilbur Williams' Portfolio</h1>
-						<p>I created this GitHub hosted webpage myself to show off some of the interesting projects i've built! Check out my data analytics, data management, data science, generative AI and machine learning projects. I am always looking to meet new cool people, so feel free to reach out to me! <br><br> BONUS: Try the game at the bottom left of the page 👀 </a> </p>
+						<p>I created this GitHub hosted webpage myself to show off some of the interesting projects i've built! Check out my data analytics, data management, data science, and generative AI projects. I am always looking to meet new cool people, so feel free to reach out to me! <br><br> BONUS: Try the game at the bottom left of the page 👀 </a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -39,7 +39,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://www.linkedin.com/in/wilbur-williams-the-first/details/featured/" class="logo">Resumé</a>
+						<a href="https://www.linkedin.com/in/wilbur-williams-the-first/" class="logo">Resumé</a>
 					</header>
 
 				<!-- Nav -->
@@ -48,8 +48,8 @@
 							<li class="active"><a href="index.html">Portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.youtube.com/channel/UCdj3dgAxb3NmKsE9IbuphGA" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-							<li><a href="https://github.com/CharlieEvert" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+							<li><a href="https://github.com/WilDev97" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.kaggle.com/wilburwilliams" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 							<li><a href="https://www.linkedin.com/in/wilbur-williams-the-first/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
@@ -62,7 +62,7 @@
 							<article class="post featured">
 								<header class="major">
 								    <span class="date">Hello!</span>
-								    <h2><a href="https://www.linkedin.com/in/ralphcharlesevertiv/">About Me</a></h2>
+								    <h2><a href="https://www.linkedin.com/in/wilbur-williams-the-first/">About Me</a></h2>
 								    <p class = "bio">
 										Greetings! I'm Wilbur Williams, hailing from the picturesque St. Thomas in the US Virgin Islands. Throughout my life, I've been a dedicated athlete, proudly representing my home in international tennis tournaments across the Caribbean. This athletic journey instilled in me the invaluable lesson that hard work may not always result in immediate victory, but it undeniably paves the way for long-term success.
 
@@ -95,7 +95,7 @@
 										<span class="date">Pandas, NumPy, OpenAI, Tensorflow, Matplotlib, Sci-Kit Learn</span>
 										<h2><a href="https://github.com/CharlieEvert/Python">Python</a></h2>
 									</header>
-									<a href="https://github.com/CharlieEvert/Python" class="image fit"><img src="images/Python-PNG-Clipart.png" alt="" /></a>
+									<a href="https://github.com/CharlieEvert/Python" class="image fit" id = "project_image"><img src="images/pythonIMG.png" alt="" /></a>
 									<p>I have worked with Python to web scrape data, clean/parse data, conduct natural language processing + sentiment analysis, explore supervised and unsupervised machine learning algorithms to classify and predict data, and visualize data using Seaborn + Matplotlib. I have also used Python to ETL embeddings at scale & engineer prompts.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/CharlieEvert/Python" class="button">View Projects</a></li>
@@ -125,10 +125,10 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">SQL, Oracle 19c, Database Diagrams, Data Management </span>
-									<h2><a href="https://github.com/CharlieEvert/Oracle19cSQL">Oracle 19c & MySQL</a></h2>
+									<span class="date">SQL & Data Management</span>
+									<h2><a href="https://github.com/CharlieEvert/Oracle19cSQL">MySQL</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/Oracle19cSQL" class="image fit"><img src="images/SQL.png" alt="" /></a>
+								<a href="https://github.com/CharlieEvert/Oracle19cSQL" class="image fit" ><img src="images/SQL.png" alt="" /></a>
 								<p>I created data warehouses and databases in Oracle 19c via MySQL and used data from it to generate Tableau visualizations and a regression models (via JMP).</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/CharlieEvert/Oracle19cSQL" class="button">View Projects</a></li>
@@ -139,7 +139,7 @@
 									<span class="date">Machine Learning, Regression, Neural Networks, Decision Trees</span>
 									<h2><a href="https://github.com/CharlieEvert/SASEnterpriseMiner">SAS Enterprise Miner</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="image fit"><img src="images/ML.png" alt="" /></a>
+								<a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="image fit" id = "project_image"><img src="images/azureimg.jpg" alt="" /></a>
 								<p>This project showcases some predictive analytical models (neural networks, stepwise regression, linear regression & decision trees) that I developed in SAS Enterprise Miner to predict powerlifting totals from 16 attributes.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="button">View Projects</a></li>
@@ -150,7 +150,7 @@
 									<span class="date">Data Mining, Machine Learning, PCA, Stats, Data Cleaning</span>
 									<h2><a href="https://github.com/CharlieEvert/JMPProjects">SAS JMP</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/JMPProjects" class="image fit"><img src="images/DM.png" alt="" /></a>
+								<a href="https://github.com/CharlieEvert/JMPProjects" class="image fit" id = "project_image"><img src="images/ggl_cert_image.jpg" alt="" /></a>
 								<p>This is a collection of JMP case studies (showcasing data mining & machine learning) that I put together explore some obscure data sets. I predict churn + admissions (to hospitals and universities) + nutrients (in candy bars) and rank pharmacies.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/CharlieEvert/JMPProjects" class="button">View Projects</a></li>
@@ -191,7 +191,7 @@
 				        <section>
 				            <h3>Social</h3>
 				            <ul class="icons alt">
-				                <li><a href="https://www.youtube.com/channel/UCdj3dgAxb3NmKsE9IbuphGA" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+				                <li><a href="" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 				                <li><a href="https://github.com/WilDev97" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				                <li><a href="https://www.kaggle.com/wilburwilliams" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 				                <li><a href="https://www.linkedin.com/in/wilbur-williams-the-first/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
