--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Pandas, NumPy, OpenAI, Tensorflow, Matplotlib, Sci-Kit Learn</span>
-										<h2><a href="https://github.com/CharlieEvert/Python">Python</a></h2>
+										<span class="date">Pandas, NumPy, OpenAI, Tensorflow</span>
+										<h2><a href="https://github.com/WilDev97">Python</a></h2>
 									</header>
-									<a href="https://github.com/CharlieEvert/Python" class="image fit" id = "project_image"><img src="images/pythonIMG.png" alt="" /></a>
+									<a href="https://github.com/WilDev97" class="image fit" id = "project_image"><img src="images/pythonIMG.png" alt="" /></a>
 									<p>I have worked with Python to web scrape data, clean/parse data, conduct natural language processing + sentiment analysis, explore supervised and unsupervised machine learning algorithms to classify and predict data, and visualize data using Seaborn + Matplotlib. I have also used Python to ETL embeddings at scale & engineer prompts.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/CharlieEvert/Python" class="button">View Projects</a></li>
+										<li><a href="https://github.com/WilDev97" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
@@ -106,10 +106,10 @@
 										<span class="date">Tidyverse, DPLYR, GGPLOT, Rplot, Machine Learning, Stats</span>
 										<h2><a href="https://github.com/WilDev97/Tennis_App">Serve Savant AI </a></h2>
 									</header>
-									<a href="https://github.com/CharlieEvert/R" class="image fit" id = "project_image"><img src="images/ServesavantImage.jpg" alt="" /></a>
+									<a href="https://github.com/WilDev97/Tennis_App" class="image fit" id = "project_image"><img src="images/ServesavantImage.jpg" alt="" /></a>
 									<p> I showcase a data cleaning, data visualization and predictive modeling project I created using R. I dissect New York City 5-car-crashes including delving into the who, what, where, when and why of the data.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/CharlieEvert/R" class="button">View Projects</a></li>
+										<li><a href="https://github.com/WilDev97/Tennis_App" class="button">View Project</a></li>
 									</ul>
 								</article>
 							<article>
