--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Pandas, NumPy, OpenAI, Tensorflow</span>
+										<span class="date">Pandas, NumPy, OpenAI</span>
 										<h2><a href="https://github.com/WilDev97">Python</a></h2>
 									</header>
 									<a href="https://github.com/WilDev97" class="image fit" id = "project_image"><img src="images/pythonIMG.png" alt="" /></a>
-									<p>I have worked with Python to web scrape data, clean/parse data, conduct natural language processing + sentiment analysis, explore supervised and unsupervised machine learning algorithms to classify and predict data, and visualize data using Seaborn + Matplotlib. I have also used Python to ETL embeddings at scale & engineer prompts.</p>
+									<p>I have worked with Python to web scrape data, clean/parse data, conduct natural language processing + sentiment analysis.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/WilDev97" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">Tidyverse, DPLYR, GGPLOT, Rplot, Machine Learning, Stats</span>
+										<span class="date">natural language processing + sentiment analysis</span>
 										<h2><a href="https://github.com/WilDev97/Tennis_App">Serve Savant AI </a></h2>
 									</header>
 									<a href="https://github.com/WilDev97/Tennis_App" class="image fit" id = "project_image"><img src="images/ServesavantImage.jpg" alt="" /></a>
@@ -114,7 +114,7 @@
 								</article>
 							<article>
 								<header>
-									<span class="date">Dashboards, Breweries, Admission Stats, Malteses, Property Taxes</span>
+									<span class="date">probability & External Apis</span>
 									<h2><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData">Poker Prophet AI</a></h2>
 								</header>
 								<a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="image fit" id = "project_image"><img src="images/catpoker.jpg" alt="" /></a>
@@ -126,32 +126,32 @@
 							<article>
 								<header>
 									<span class="date">SQL & Data Management</span>
-									<h2><a href="https://github.com/CharlieEvert/Oracle19cSQL">MySQL</a></h2>
+									<h2><a href="https://github.com/WilDev97">MySQL</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/Oracle19cSQL" class="image fit" ><img src="images/SQL.png" alt="" /></a>
+								<a href="https://github.com/WilDev97" class="image fit" ><img src="images/SQL.png" alt="" /></a>
 								<p>I created data warehouses and databases in Oracle 19c via MySQL and used data from it to generate Tableau visualizations and a regression models (via JMP).</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/Oracle19cSQL" class="button">View Projects</a></li>
+									<li><a href="https://github.com/WilDev97" class="button">View Projects</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<span class="date">Machine Learning, Regression, Neural Networks, Decision Trees</span>
-									<h2><a href="https://github.com/CharlieEvert/SASEnterpriseMiner">SAS Enterprise Miner</a></h2>
+									<span class="date">azure</span>
+									<h2><a href="https://github.com/WilDev97">SAS Enterprise Miner</a></h2>
 								</header>
 								<a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="image fit" id = "project_image"><img src="images/azureimg.jpg" alt="" /></a>
 								<p>This project showcases some predictive analytical models (neural networks, stepwise regression, linear regression & decision trees) that I developed in SAS Enterprise Miner to predict powerlifting totals from 16 attributes.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="button">View Projects</a></li>
+									<li><a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="button">View Cert</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<span class="date">Data Mining, Machine Learning, PCA, Stats, Data Cleaning</span>
+									<span class="date">google</span>
 									<h2><a href="https://github.com/CharlieEvert/JMPProjects">SAS JMP</a></h2>
 								</header>
 								<a href="https://github.com/CharlieEvert/JMPProjects" class="image fit" id = "project_image"><img src="images/ggl_cert_image.jpg" alt="" /></a>
-								<p>This is a collection of JMP case studies (showcasing data mining & machine learning) that I put together explore some obscure data sets. I predict churn + admissions (to hospitals and universities) + nutrients (in candy bars) and rank pharmacies.</p>
+								<p></p>
 								<ul class="actions special">
 									<li><a href="https://github.com/CharlieEvert/JMPProjects" class="button">View Projects</a></li>
 								</ul>
