--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<h2><a href="https://github.com/WilDev97/Tennis_App">Serve Savant AI </a></h2>
 									</header>
 									<a href="https://github.com/WilDev97/Tennis_App" class="image fit" id = "project_image"><img src="images/ServesavantImage.jpg" alt="" /></a>
-									<p> I showcase a data cleaning, data visualization and predictive modeling project I created using R. I dissect New York City 5-car-crashes including delving into the who, what, where, when and why of the data.</p>
+									<p>This project leverages the power of probability and generative AI to predict the next best move in poker, providing players with a cutting-edge tool to enhance their gameplay. By integrating statistical analysis we can evaluate the current game state, assess potential outcomes, and recommend actions that maximize the chances of winning.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/WilDev97/Tennis_App" class="button">View Project</a></li>
 									</ul>
@@ -118,42 +118,42 @@
 									<h2><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData">Poker Prophet AI</a></h2>
 								</header>
 								<a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="image fit" id = "project_image"><img src="images/catpoker.jpg" alt="" /></a>
-								<p>These are data visualizations that I created using Tableau and PowerBI using Open Data sources. I explore breweries, malteses (the ferocious little dogs), crime, admissions, telecom and even property tax data. </p>
+								<p>Welcome to the future of tennis coaching, where personalized training meets cutting-edge technology. This innovative project harnesses the power of AI, comprehensive data collection, web scraping, and interactive chatbots to deliver a uniquely tailored tennis coaching experience for each individual player. By analyzing player performance data, our AI system generates customized training plans that address specific strengths and areas for improvement. </p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="button">View Projects</a></li>
+									<li><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="button">View Project</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
 									<span class="date">SQL & Data Management</span>
-									<h2><a href="https://github.com/WilDev97">MySQL</a></h2>
+									<h2><a href="https://www.w3schools.com/sql/sql_intro.asp">MySQL</a></h2>
 								</header>
-								<a href="https://github.com/WilDev97" class="image fit" ><img src="images/SQL.png" alt="" /></a>
+								<a href="https://www.w3schools.com/sql/sql_intro.asp" class="image fit" ><img src="images/SQL.png" alt="" /></a>
 								<p>I created data warehouses and databases in Oracle 19c via MySQL and used data from it to generate Tableau visualizations and a regression models (via JMP).</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/WilDev97" class="button">View Projects</a></li>
+									<li><a href="https://www.w3schools.com/sql/sql_intro.asp" class="button">Learn about SQL</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<span class="date">azure</span>
-									<h2><a href="https://github.com/WilDev97">SAS Enterprise Miner</a></h2>
+									<span class="date">Microsoft Azure</span>
+									<h2><a href="https://github.com/WilDev97">Azure Fundamentals</a></h2>
 								</header>
 								<a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="image fit" id = "project_image"><img src="images/azureimg.jpg" alt="" /></a>
-								<p>This project showcases some predictive analytical models (neural networks, stepwise regression, linear regression & decision trees) that I developed in SAS Enterprise Miner to predict powerlifting totals from 16 attributes.</p>
+								<p></p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="button">View Cert</a></li>
+									<li><a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="button">View Certification</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<span class="date">google</span>
-									<h2><a href="https://github.com/CharlieEvert/JMPProjects">SAS JMP</a></h2>
+									<span class="date">Data Analytics</span>
+									<h2><a href="https://github.com/CharlieEvert/JMPProjects">Google Data Analytics Certification</a></h2>
 								</header>
 								<a href="https://github.com/CharlieEvert/JMPProjects" class="image fit" id = "project_image"><img src="images/ggl_cert_image.jpg" alt="" /></a>
 								<p></p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/JMPProjects" class="button">View Projects</a></li>
+									<li><a href="https://github.com/CharlieEvert/JMPProjects" class="button">View Certification</a></li>
 								</ul>
 							</article>
 						</section>
