--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 								</article>
 							<article>
 								<header>
-									<span class="date">probability & External Apis</span>
-									<h2><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData">Poker Prophet AI</a></h2>
+									<span class="date">probability & external APIs</span>
+									<h2><a href="https://github.com/WilDev97/CountingCards">Poker Prophet AI</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="image fit" id = "project_image"><img src="images/catpoker.jpg" alt="" /></a>
+								<a href="https://github.com/WilDev97/CountingCards" class="image fit" id = "project_image"><img src="images/catpoker.jpg" alt="" /></a>
 								<p>Welcome to the future of tennis coaching, where personalized training meets cutting-edge technology. This innovative project harnesses the power of AI, comprehensive data collection, web scraping, and interactive chatbots to deliver a uniquely tailored tennis coaching experience for each individual player. By analyzing player performance data, our AI system generates customized training plans that address specific strengths and areas for improvement. </p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/DataVisualizationsFromOpenData" class="button">View Project</a></li>
+									<li><a href="https://github.com/WilDev97/CountingCards" class="button">View Project</a></li>
 								</ul>
 							</article>
 							<article>
@@ -137,23 +137,23 @@
 							<article>
 								<header>
 									<span class="date">Microsoft Azure</span>
-									<h2><a href="https://github.com/WilDev97">Azure Fundamentals</a></h2>
+									<h2><a href="https://learn.microsoft.com/api/credentials/share/en-us/WilburWilliams-5535/BE3D406944C8E3AB?sharingId=DE3D1CB99E010735">Azure Fundamentals</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="image fit" id = "project_image"><img src="images/azureimg.jpg" alt="" /></a>
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/WilburWilliams-5535/BE3D406944C8E3AB?sharingId=DE3D1CB99E010735" class="image fit" id = "project_image"><img src="images/azureimg.jpg" alt="" /></a>
 								<p></p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/SASEnterpriseMiner" class="button">View Certification</a></li>
+									<li><a href="https://learn.microsoft.com/api/credentials/share/en-us/WilburWilliams-5535/BE3D406944C8E3AB?sharingId=DE3D1CB99E010735" class="button">View Certification</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
 									<span class="date">Data Analytics</span>
-									<h2><a href="https://github.com/CharlieEvert/JMPProjects">Google Data Analytics Certification</a></h2>
+									<h2><a href="https://coursera.org/share/7b808379b00c72227e3202490fe5fb96">Google Data Analytics Certification</a></h2>
 								</header>
-								<a href="https://github.com/CharlieEvert/JMPProjects" class="image fit" id = "project_image"><img src="images/ggl_cert_image.jpg" alt="" /></a>
+								<a href="https://coursera.org/share/7b808379b00c72227e3202490fe5fb96" class="image fit" id = "project_image"><img src="images/ggl_cert_image.jpg" alt="" /></a>
 								<p></p>
 								<ul class="actions special">
-									<li><a href="https://github.com/CharlieEvert/JMPProjects" class="button">View Certification</a></li>
+									<li><a href="https://coursera.org/share/7b808379b00c72227e3202490fe5fb96s" class="button">View Certification</a></li>
 								</ul>
 							</article>
 						</section>
