--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Wilbur Williams' Portfolio</h1>
-						<p>I created this GitHub hosted webpage myself to show off some of the interesting projects i've built! Check out my data analytics, data management, data science, and generative AI projects. I am always looking to meet new cool people, so feel free to reach out to me! <br><br> BONUS: Try the game at the bottom left of the page 👀 </a> </p>
+						<p>I created this GitHub hosted webpage myself to show off my journey of interesting projects and certifications! Check out my data analytics, data management, and generative AI projects. I am always looking to meet new cool people, so feel free to reach out to me! <br><br> BONUS: Try the game at the bottom left of the page 👀 </a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -129,7 +129,7 @@
 									<h2><a href="https://www.w3schools.com/sql/sql_intro.asp">MySQL</a></h2>
 								</header>
 								<a href="https://www.w3schools.com/sql/sql_intro.asp" class="image fit" ><img src="images/SQL.png" alt="" /></a>
-								<p>I created data warehouses and databases in Oracle 19c via MySQL and used data from it to generate Tableau visualizations and a regression models (via JMP).</p>
+								<p></p>
 								<ul class="actions special">
 									<li><a href="https://www.w3schools.com/sql/sql_intro.asp" class="button">Learn about SQL</a></li>
 								</ul>
@@ -137,7 +137,7 @@
 							<article>
 								<header>
 									<span class="date">Microsoft Azure</span>
-									<h2><a href="https://learn.microsoft.com/api/credentials/share/en-us/WilburWilliams-5535/BE3D406944C8E3AB?sharingId=DE3D1CB99E010735">Azure Fundamentals</a></h2>
+									<h2><a href="https://learn.microsoft.com/api/credentials/share/en-us/WilburWilliams-5535/BE3D406944C8E3AB?sharingId=DE3D1CB99E010735">Azure Fundamentals 900</a></h2>
 								</header>
 								<a href="https://learn.microsoft.com/api/credentials/share/en-us/WilburWilliams-5535/BE3D406944C8E3AB?sharingId=DE3D1CB99E010735" class="image fit" id = "project_image"><img src="images/azureimg.jpg" alt="" /></a>
 								<p></p>
